<resources>
    <string name="app_name">1号菜篮子工程</string>
    <string name="bugly">b0437cb805</string>

    <string name="price">¥ %s</string>
    <string name="order_price">共%1s件商品 总计：¥ %2s</string>
    <string name="order_limit_time">请在 %s 内完成交易</string>
    <string name="total_price">总计 ¥ %s</string>
    <string name="product_count">共%s件商品</string>
    <string name="order_number">订单号：%s</string>
    <string name="no_granted">未授予权限</string>

    <string name="about1">\t\t\t\t我们1号菜篮子工程是国家民生项目“菜篮子工程”的运营者。作为国家战略项目“智慧社区家门口服务体系”在上海先行先试的样板，1号菜篮子工程首先向上海社区80岁以上老人，独居、孤寡老人，行动不便的残障人士、以及军烈属家庭提供食品配送服务，并逐步扩大至其他社区居民家庭，让大家都能吃到绿色、无公害的健康食品。</string>
    <string name="about2">\t\t\t\t现在，我们1号菜篮子工程进入社区，来到您身边，让大家在家里，足不出户就能享受到1号菜篮子工程为社区居民精心准备的新鲜、质优、平价食品，成为您家门口的菜场。同时，1号菜篮子工程每天还为社区居民优选出超值的特价荤、蔬菜各一款，供您选购。在先行先试的社区街道，我们会把您在1号菜篮子工程平台上购买的食品，免费配送到您的家。希望通过我们的服务、我们的食品，社区居民们可以体验到党和政府对老百姓日常生活的关怀。</string>
    <string name="about3">\t\t\t\t1号菜篮子工程是上海市健康科技协会健康食品推介平台指定的安全食品平台。1号菜篮子工程和农委、中粮、光明集团在全国各地的生产基地紧密合作，省去中间环节，以非常亲民的价格直接提供给老百姓。我们和上海市健康科技协会联手，一起建立起质量安全体系，对上游生产基地的产品进行检测、认证，为社区居民筑起一道食品安全防线，有效防止有害食品流入我们客户手中，满足他们对餐桌食品“鲜活、优质、营养、方便、无公害”的消费要求。</string>
    <string name="about4">\t\t\t\t健康和食品安全紧密相关，是国家和地方政府重点关注的民生工程，1号菜篮子工程作为国家民生工程的运营方，这也是我们的关注重点。在1号菜篮子工程，我们绝不会放过任何有害的食品，让它们流到社区居民的餐桌上，饭碗中。</string>
    <string name="about5">\t\t\t\t1号菜篮子工程平台提供手机App、微信公众号、电脑、电话、DM单等多种途径，方便社区居民来购买我们的新鲜、放心、平价食品，获得我们的服务。如果您希望有个健康的生活，希望吃的放心、买的舒心，1号菜篮子工程绝对是您的不二选择。</string>

    <string name="add_address">请先添加收货地址</string>
    <string name="buy">请选购商品</string>
    <string name="service_phone">4000877021</string>
    <string name="not_install">请先安装 %s</string>
    <string name="agreenYibao">开始购物</string>
    <string name="aggeenLove">开始购物</string>
    <string name="one_oneday">特惠商品荤素每天各只可添加一件</string>

    <string name="pop_thanks">感谢%1s爱心捐赠%2s元</string>
    <string name="pop_thanks_to">到上海有人公益基金会</string>
    <string name="pop_thanks_love">本基金爱心捐款</string>
    <string name="pop_thanks_description">有人基金会帮助残障社群和困难群体\n平等、有尊严地生活</string>
    <string name="pop_learnmore">（长按了解更多）</string>
</resources>
