<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="305dp"
        android:layout_height="512dp"
        android:background="@mipmap/ic_pop_background">

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="111dp"
            android:src="@mipmap/ic_pop_logo" />

        <TextView
            android:id="@+id/tvThanks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivAvatar"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/pop_thanks"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvThanksTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvThanks"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/pop_thanks_to"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <include
            android:id="@+id/llLine"
            layout="@layout/layout_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tvThanksTo"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tvThanksLove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llLine"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/pop_thanks_love"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvThanksDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvThanksLove"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="2dp"
            android:text="@string/pop_thanks_description"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/ivQrcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvThanksDescription"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@mipmap/ic_pop_qrcode" />

        <TextView
            android:id="@+id/tvLearnMore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivQrcode"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="2dp"
            android:text="@string/pop_learnmore"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <Button
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_below="@id/tvLearnMore"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:text="我要分享"
            android:textColor="@color/green"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>